# mirror-clone

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
overlay/: Cargo.toml
overlay/src/: lib.rs
src/: checksum_pipe.rs  common.rs  conda.rs  crates_io.rs  dart.rs  error.rs  file_backend.rs  filter_pipe.rs  ghcup.rs  github_release.rs  gradle.rs  homebrew.rs  html_scanner.rs  index_pipe.rs  lean.rs  main.rs  merge_pipe.rs  metadata.rs  mirror_intel.rs  opam.rs  opts.rs  oracle.rs  pypi.rs  python_version.rs  rewrite_pipe.rs  rsync.rs  rustup.rs  s3.rs  simple_diff_transfer.rs  stream_pipe.rs  tar.rs  timeout.rs  traits.rs  utils.rs
src/ghcup/: hls.rs  mod.rs  packages.rs  parser.rs  script.rs  utils.rs  version.rs  yaml.rs
src/lean/: elan.rs
src/snapshots/: mirror_clone__python_version__tests__ >tv1.0 >n .snap  mirror_clone__python_version__tests__0.009.snap  mirror_clone__python_version__tests__1.0+abc.7.snap  mirror_clone__python_version__tests__1.0-r4.snap  mirror_clone__python_version__tests__1.0.post456.dev34.snap  mirror_clone__python_version__tests__1.0a1.snap  mirror_clone__python_version__tests__1.0a2.dev456.snap  mirror_clone__python_version__tests__1.0b2.post345.snap  mirror_clone__python_version__tests__1.0b2.snap  mirror_clone__python_version__tests__1.0pre-1-1.snap  mirror_clone__python_version__tests__1.0rc1.dev456.snap  mirror_clone__python_version__tests__1.1-a1.snap  mirror_clone__python_version__tests__1.1.dev1.snap  mirror_clone__python_version__tests__1.1b1.snap  mirror_clone__python_version__tests__1.1preview3.snap  mirror_clone__python_version__tests__1.2-post-2.snap  mirror_clone__python_version__tests__ord.snap  mirror_clone__python_version__tests__parse@0.snap  mirror_clone__python_version__tests__parse@1!1.0.snap  mirror_clone__python_version__tests__parse@1.0+5.snap  mirror_clone__python_version__tests__parse@1.0+abc.5.snap  mirror_clone__python_version__tests__parse@1.0-.snap  mirror_clone__python_version__tests__parse@1.0-1.snap  mirror_clone__python_version__tests__parse@1.0.15.snap  mirror_clone__python_version__tests__parse@1.0.dev456.snap  mirror_clone__python_version__tests__parse@1.0.post456.snap  mirror_clone__python_version__tests__parse@1.0_1.snap  mirror_clone__python_version__tests__parse@1.0a12.dev456.snap  mirror_clone__python_version__tests__parse@1.0a12.snap  mirror_clone__python_version__tests__parse@1.0b1.dev456.snap  mirror_clone__python_version__tests__parse@1.0b2.post345.dev456.snap  mirror_clone__python_version__tests__parse@1.0rc1.snap  mirror_clone__python_version__tests__parse@1.1RC1.snap  mirror_clone__python_version__tests__parse@1.1beta2.snap  mirror_clone__python_version__tests__parse@1.2a.snap  mirror_clone__python_version__tests__parse@1.dev0.snap
src/utils/: checksum.rs  retry.rs
