[package]
name = "mirror-clone"
version = "0.2.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
bytes = "1.0"
regex = "1"
indicatif = "0.15"
futures-core = "0.3"
futures-retry = "0.6"
thiserror = "1.0"
rand = "0.8"
slog-term = "2.6"
slog = "2.5"
slog-async = "2.5"
slog-envlogger = "2.2"
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"
itertools = "0.9"
serde_json = "1.0"
structopt = "0.3"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
console = "0.13"
chrono = "0.4"
zip = "0.5"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
iter-set = "2.0"
tokio-util = "0.6"
url = "2.2"
