[package]
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"
name = "mirror-clone"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
console = "0.14"
filetime = "0.2"
flate2 = "1.0"
futures-core = "0.3"
futures-util = "0.3"
html-escape = "0.2"
indicatif = "0.15"
iter-set = "2.0"
itertools = "0.10"
lazy_static = "1.4"
md-5 = "0.9"
parse_link_header = "0.2"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["stream", "json"] }
rusoto_core = "0.47"
rusoto_s3 = "0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.9"
slog = "2.5"
slog-async = "2.5"
slog-envlogger = "2.2"
slog-term = "2.6"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-io-compat = "0.1"
tokio-util = "0.6"
url = "2.2"
urlencoding = "2.1"
walkdir = "2"
zip = "0.5"