[package]
name = "overlay"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tempdir = "0.3"
